8205006: Assertion failure when rehashing stringtable

Reviewed-by: lfoltan, zgu